# stego-264-mv

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ffmpeg.diff  ffmpeg_upstream.diff
analysis/: Differences.py  hidenseek.tif  hidenseek_footage.tif  hidenseek_mvsteg_subtract.tif  loadmvs.m  lsbplane.m  mvsteg.tif  mvsteg_footage.tif  original.tif  original_footage.tif  original_hidenseek_divide.tif  original_mvsteg_subtract.tif  plot2d.m  rand-hidenseek.tif  rand-hidenseek_footage.tif  rand-hidenseek_mvsteg_divide.tif  visualattack.m
libs-diff/: ffmpeg.diff  ffmpeg_2.diff
src/: decoder.c  encoder.c
src/stegolib/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  algorithm.cpp  algorithm.h  stego_connector.cpp  stego_connector.h
src/stegolib/algo/: DumpMVs.cpp  DumpMVs.h  DumpMvs.cpp  DumpMvs.h  HideSeek.cpp  HideSeek.h  MVSteg.cpp  MVSteg.h  MVStegVuln.cpp  MVStegVuln.h  RandomisedHideSeek.cpp  RandomisedHideSeek.h
src/stegolib/crypto/: Buffer.h  CryptoFile.cpp  CryptoFile.h
